# SearchAndRescue

./: README.md  package.xml  setup.py
launch/: both_robot_launch.py  robot_launch.py
my_package/: mavic_driver.py  mavic_node.py  turtlebot_controller.py
resource/: mavic_webots.urdf  ros2control.yml  tello.urdf  turtlebot_webots.urdf
turtlebot_controller/: simple_controller.py
worlds/: my_world.wbt  my_world_old.wbt  turtle_world.wbt
